--- a/galeria.html
+++ b/galeria.html
@@ -14,11 +14,11 @@
   <!-- Menú Lateral (modificado para deslizar desde el lado derecho) -->
   <div class="sidebar" id="sidebar">
     <div id="logo-principal">
-      <a href="index.html"><img src="images/logobnpng.png" alt="Logo Colegio OTA"></a>
+      <a href="https://octaviovr5.github.io/Colegio-OTA/"><img src="images/logobnpng.png" alt="Logo Colegio OTA"></a>
     </div>
     <nav>
       <ul>
-        <li><a href="index.html">Inicio</a></li>
+        <li><a href="https://octaviovr5.github.io/Colegio-OTA/">Inicio</a></li>
         <li><a href="galeria.html">Galería</a></li>
         <!-- <li><a href="acerca.html">Acerca de</a></li>
         <li><a href="contacto.html">Contacto</a></li> -->
